--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 01 - UK Attractions"
-author: "INSERT NAME HERE"
+author: "Freya"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -20,6 +20,8 @@ visitors <- read_csv("data/UK-visitor-numbers.csv")
 
 
 
+
+
 # Wrangling Data
 
 ## Question 1
@@ -27,7 +29,9 @@ visitors <- read_csv("data/UK-visitor-numbers.csv")
 _How many tourist attractions are there in the data set?_
 
 ```{r Q1}
-visitors %>% count()
+
+#How many outside attractions are there in the "Yorkshire and the Humber" region that gives "Members" free admission, which had more than 100,000 visitors in 2022?
+
 ```
 
 ### Exercise a.
@@ -37,7 +41,7 @@ _Create a frequency table of the number of tourist attractions in the data set b
 ```{r Ex_a}
 # Delete the comment '#' symbol at the start of the next line and complete the code. 
 
-#visitors %>% count(_____)
+visitors %>% count(attraction)
 ```
 
 ### Exercise b.
@@ -47,7 +51,7 @@ _Create a frequency table by `admission` and `setting`._
 ```{r Ex_b}
 # Delete the comment '#' symbol at the start of the next line and complete the code.
 
-#visitors %>% count(_____, _____)
+visitors %>% count(admission, setting)
 ```
 
 
@@ -57,6 +61,12 @@ _What are the variable data types?_
 
 ```{r Q2_part1}
 class(visitors$n_2022)
+class(visitors$n_2021)
+class(visitors$attraction)
+class(visitors$admission)
+class(visitors$setting)
+class(visitors$region)
+
 ```
 
 ```{r Q2_part2}
@@ -71,15 +81,16 @@ _Which attraction had the most number of visitors in 2022?_
 
 ```{r Q3}
 visitors %>% arrange(desc(n_2022))
+#answer: "The Crown Estate, Windsor Great Park", n = 5,636,844
 ```
 
 ### Exercise c.
 
 _What are the top 10 most visited attractions in 2021?_
 ```{r Ex_c}
-#visitors %>% 
-#  arrange(____(____)) %>%
-#  head(n = ____)
+visitors %>% 
+  arrange(desc(n_2022)) %>%
+  head(n = 10)
 ```
 
 ## Question 4
@@ -88,6 +99,8 @@ _What is the admission charge for the `"National Museum of Scotland"`?_
 
 ```{r Q4}
 visitors %>% filter(attraction == "National Museum of Scotland")
+#answer: free
+
 ```
 
 
@@ -96,7 +109,8 @@ visitors %>% filter(attraction == "National Museum of Scotland")
 _Which attraction had exactly 565,772 visitors in 2022?_
 
 ```{r Ex_d}
-#visitors %>% filter(___ == ____)
+visitors %>% filter(n_2022 == 565772)
+#answer: "Knowsley Safari and Knowsley Hall"
 ```
 
 ### Exercise e.
@@ -104,9 +118,11 @@ _Which attraction had exactly 565,772 visitors in 2022?_
 _How many attraction had more than 1 million visitors in 2022?_
 
 ```{r Ex_e}
-#visitors %>% 
-#  filter(____) %>%
-#  count()
+visitors %>% 
+  filter(n_2022 > 1000000) %>%
+  count()
+  
+#answer = 22
 ```
 
 ## Question 5
@@ -119,9 +135,10 @@ visitors %>%
     setting == "O",
     region == "Yorkshire and the Humber",
     admission == "Members",
-    n_2022 >= 100000
-    ) %>%
+    n_2022 > 100000
+  ) %>%
   count()
+#answer = 3
 ```
 
 ### Exercise f.
@@ -129,11 +146,12 @@ visitors %>%
 _How many attractions had between 50,000 and 100,000 visitors in 2022?_
 
 ```{r Ex_f}
-#visitors %>% 
-#  ____(
-#    ______,
-#    ______ ) %>%
-#  count()
+visitors %>% 
+  filter(
+    n_2022 >= 50000,
+    n_2022 <= 100000 ) %>%
+  count()
+#answer = 50
 ```
 
 ### Exercise g.
@@ -142,8 +160,8 @@ _How many regions have more than 50 tourist attraction in the data set? (Hint: Y
 
 ```{r Ex_g}
 #visitors %>% 
-#  _____(region) %>%
-#  filter(______)
+#  tabulate(r) %>%
+#  filter()
 ```
 
 
