--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -159,9 +159,9 @@ visitors %>%
 _How many regions have more than 50 tourist attraction in the data set? (Hint: You will need to tabulate the data before filtering.)_
 
 ```{r Ex_g}
-#visitors %>% 
-#  tabulate(r) %>%
-#  filter()
+visitors %>% 
+  count(region) %>%
+  filter(n > 50)
 ```
 
 
@@ -178,6 +178,8 @@ visitors %>%
     mean_2022 = mean(n_2022),
     med_2022 = median(n_2022)
   )
+
+
 ```
 
 
@@ -186,11 +188,11 @@ visitors %>%
 _Perform the same calculation for the 2021 admissions data._
 
 ```{r Ex_h}
-#visitors %>% 
-#  ______(
-#    __________,
-#    __________
-#  )
+visitors %>% 
+  summarise(
+    mean_2021 = mean(n_2021),
+    med_2021 = median(n_2021)
+  )
 ```
 
 All values in the output are `NA`!
@@ -199,7 +201,7 @@ All values in the output are `NA`!
 
 _What does `NA` stand for and why are you getting this as your answer to the previous question._
 
-**Write your answer here**
+**not available: some of the data in n_2021 is also NA so any calculations will return NA**
 
 
 
@@ -208,7 +210,11 @@ _What does `NA` stand for and why are you getting this as your answer to the pre
 
 _Look at the help pages for the `mean()` and `median()` commands to see what the input argument `na.rm` does. Edit your code from exercise h so that it computes the summary statistics where data is available._
 
-**Write your answer here**
+visitors %>% 
+  summarise(
+    mean_2021 = mean(n_2021, na.rm = T),
+    med_2021 = median(n_2021, na.rm = T)
+  )
 
 
 
@@ -230,7 +236,7 @@ visitors %>%
 
 _Observe in question 6 that the mean statistics across all settings are much larger than the corresponding median statistics. Discuss in your group what this suggests about the data._
 
-**Write your answer here**
+**data is not spread evenly & larger values are more extreme**
 
 
 
@@ -263,8 +269,9 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 
 
 ```{r Ex_l}
-#________ %>%
-#  ______(_______)
+visitors_with_nations %>%
+  group_by(nation) %>%
+  count()
 ```
 
 
@@ -276,7 +283,10 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 _Within each of the 4 nations, what is the proportion of tourist attractions that have free admission for all visitors?_
 
 ```{r Ex_m}
-# Write your code here
+visitors_with_nations%>%
+  group_by(nation)%>%
+  filter(admission == "Free")%>%
+  count()
 
 
 ```
